Add custom element registration

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body unresolved touch-action="auto">
 <ul>
-    <li><a href="bare-minium-custom-element-sugaring">Bare Minimum Custom Element Sugaring</a></li>
+    <li><a href="bare-minium-custom-element-sugaring/custom-element-constructor.html">Custom element constructor</a></li>
+    <li><a href="bare-minium-custom-element-sugaring/custom-element-registration.html">Custom element registration</a></li>
 </ul>
 </body>
 </html>
