--- a/bare-minium-custom-element-sugaring/custom-element-registration.html
+++ b/bare-minium-custom-element-sugaring/custom-element-registration.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Polymer Samples - Bare Minimum Custom Element Sugaring">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
-  <title>Polymer Samples - Bare Minimum Custom Element Sugaring</title>
+  <title>Polymer Samples - Custom element registration</title>
   <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="/bower_components/polymer/polymer.html">
 </head>
