Add bespoke constructor sample

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
     <li><a href="bare-minium-custom-element-sugaring/custom-element-constructor.html">Custom element constructor</a></li>
     <li><a href="bare-minium-custom-element-sugaring/custom-element-registration.html">Custom element registration</a></li>
+    <li><a href="bare-minium-custom-element-sugaring/bespoke-constructor-support.html">Bespoke constructor support</a></li>
 </ul>
 </body>
 </html>
