--- a/samples/basic-lifecycle-callbacks/index.html
+++ b/samples/basic-lifecycle-callbacks/index.html
@@ -8,7 +8,7 @@
 	<link rel="import" href="/bower_components/polymer/polymer.html">
 </head>
 <body>
-<my-element></my-element>
+<my-element id="my-id"></my-element>
 <script>
   function out(msg) {
     document.write(msg + '</br>');
