--- a/samples/read-only-properties.html
+++ b/samples/read-only-properties.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
-	<title>Polymer Samples - Path change notification</title>
+	<title>Polymer Samples - Read-only properties</title>
 	<script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
 	<link rel="import" href="/bower_components/polymer/polymer.html">
 </head>
 <body>
 <dom-module id="custom-element">
-  <template>
-    <div>{{user.manager.name}}</div>
-  </template>
+	<template>
+  Response <span>{{response}}</span>
+	</template>
 </dom-module>
 
 <script>
@@ -20,36 +20,27 @@
       is: 'custom-element',
 
       properties: {
-        user: {
+        response: {
           type: Object,
-          value: {
-            manager: {
-              name: 'No Name'
-            }
-          }
+          readOnly: true,
+          notify: true
         }
       },
 
-      reassignManager: function(newManager) {
-        this.user.manager = newManager;
-        this.notifyPath('user.manager', this.user.manager);
-      },
-
-      reassignManagerWithSetPathValye: function(newManager) {
-        this.setPathValue('user.manager', newManager);
+      responseHandler: function(response) {
+        this._setResponse(response);
       },
 
       ready: function() {
-        this.reassignManager({name: 'John Doe'});
-
         setTimeout(function() {
-          this.reassignManagerWithSetPathValye({name: 'Jane Doe'})
+          this.responseHandler('loaded');
         }.bind(this), 500);
       }
     });
   });
 </script>
 
-<custom-element></custom-element>
+<!-- ready will not be displayed because It's read-only property-->
+<custom-element response="ready"></custom-element>
 </body>
 </html>
