--- a/samples/binding-to-native-element-attributes.html
+++ b/samples/binding-to-native-element-attributes.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - Binding to native element attributes</title>
-	<script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
+	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
 <dom-module id="custom-element">
