--- a/samples/custom-css-properties-with-mixin.html
+++ b/samples/custom-css-properties-with-mixin.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
   <title>Polymer Samples - Custom CSS properties with mixin</title>
-  <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
-  <link rel="import" href="/bower_components/polymer/polymer.html">
+  <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
 <dom-module id="my-toolbar">
