--- a/samples/dom-api.html
+++ b/samples/dom-api.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - DOM API</title>
-	<script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
+	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="/bower_components/chai/chai.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
+	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
 <dom-apis-anynode></dom-apis-anynode>
