--- a/samples/static-attributes-on-host.html
+++ b/samples/static-attributes-on-host.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - Static attributes on host</title>
-	<script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
-	<link rel="import" href="/bower_components/polymer/polymer.html">
+	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
 <!-- result in: <x-custom role="button" aria-disabled tabindex="0"></x-custom> -->
