--- a/samples/attribute-deserialization.html
+++ b/samples/attribute-deserialization.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - Attribute deserialization</title>
 	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="debug.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
