--- a/samples/configuring-default-property-values.html
+++ b/samples/configuring-default-property-values.html
@@ -6,6 +6,7 @@
 	<title>Polymer Samples - Configuring default property values</title>
 	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="/bower_components/chai/chai.js"></script>
+  <script src="debug.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
