--- a/samples/custom-element-constructor.html
+++ b/samples/custom-element-constructor.html
@@ -5,20 +5,21 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
   <title>Polymer Samples - Custom element constructor</title>
   <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="debug.js"></script>
   <link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
 <my-element></my-element>
 <script>
-    var MyElement = Polymer.Class({
-      is: 'my-element',
+  var MyElement = Polymer.Class({
+    is: 'my-element',
 
-      created: function() {
-        this.innerHTML = 'My element!';
-      }
-    });
+    created: function() {
+      this.innerHTML = 'My element!';
+    }
+  });
 
-    document.registerElement('my-element', MyElement);
-    </script>
+  document.registerElement('my-element', MyElement);
+</script>
 </body>
 </html>
