--- a/samples/dom-api.html
+++ b/samples/dom-api.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - DOM API</title>
 	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="debug.js"></script>
   <script src="/bower_components/chai/chai.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
@@ -79,6 +80,5 @@
   assert.equal(distributed, div);
   assert.equal(insertedTo, content);
 </script>
-
 </body>
 </html>
