--- a/samples/dom-re-distribution.html
+++ b/samples/dom-re-distribution.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
 	<title>Polymer Samples - DOM re-distribution</title>
 	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="debug.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
@@ -39,6 +40,5 @@
     is: 'my-element'
   });
 </script>
-
 </body>
 </html>
