--- a/samples/global-polymer-settings.html
+++ b/samples/global-polymer-settings.html
@@ -6,6 +6,7 @@
 	<title>Polymer Samples - Global Polymer settings</title>
   <script>Polymer = {dom: 'shadow'};</script>
 	<script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="debug.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
