--- a/samples/custom-css-properties-with-mixin.html
+++ b/samples/custom-css-properties-with-mixin.html
@@ -70,8 +70,10 @@
   </template>
 
   <script>
-    Polymer({
-      is: 'my-element'
+    document.addEventListener('WebComponentsReady', function() {
+      Polymer({
+        is: 'my-element'
+      });
     });
   </script>
 </dom-module>
