--- a/samples/custom-element-registration.html
+++ b/samples/custom-element-registration.html
@@ -10,12 +10,14 @@
 </head>
 <body>
 <script>
-  var MyElement = Polymer({
-    is: 'my-element',
+  document.addEventListener('WebComponentsReady', function() {
+    var MyElement = Polymer({
+      is: 'my-element',
 
-    created: function() {
-      this.innerHTML = 'My element!';
-    }
+      created: function() {
+        this.innerHTML = 'My element!';
+      }
+    });
   });
 </script>
 
