--- a/samples/dom-re-distribution.html
+++ b/samples/dom-re-distribution.html
@@ -36,8 +36,10 @@
 </dom-module>
 
 <script>
-  Polymer({
-    is: 'my-element'
+  document.addEventListener('WebComponentsReady', function() {
+    Polymer({
+      is: 'my-element'
+    });
   });
 </script>
 </body>
