--- a/samples/array-selector.html
+++ b/samples/array-selector.html
@@ -29,19 +29,21 @@
   </template>
 
   <script>
-    Polymer({
-      is: 'employee-list',
-      ready: function() {
-        this.employees = [
-          {first: 'Bob', last: 'Smith', type: 'manager'},
-          {first: 'Sally', last: 'Johnson', type: 'manager'},
-          {first: 'John', last: 'Doe', type: 'engineer'}
-        ];
-      },
-      toggleSelection: function(e) {
-        var item = this.$.employeeList.itemForElement(e.target);
-        this.$.selector.select(item);
-      }
+    document.addEventListener('WebComponentsReady', function() {
+      Polymer({
+        is: 'employee-list',
+        ready: function() {
+          this.employees = [
+            {first: 'Bob', last: 'Smith', type: 'manager'},
+            {first: 'Sally', last: 'Johnson', type: 'manager'},
+            {first: 'John', last: 'Doe', type: 'engineer'}
+          ];
+        },
+        toggleSelection: function(e) {
+          var item = this.$.employeeList.itemForElement(e.target);
+          this.$.selector.select(item);
+        }
+      });
     });
   </script>
 </dom-module>
