--- a/samples/attribute-deserialization.html
+++ b/samples/attribute-deserialization.html
@@ -17,35 +17,37 @@
 <br/>
 <x-custom-camel-case-property user-name="Scott"></x-custom-camel-case-property>
 <script>
-  Polymer({
-    is: 'x-custom',
+  document.addEventListener('WebComponentsReady', function() {
+    Polymer({
+      is: 'x-custom',
 
-    properties: {
-      user: String,
-      manager: {
-        type: Boolean,
-        notify: true
+      properties: {
+        user: String,
+        manager: {
+          type: Boolean,
+          notify: true
+        }
+      },
+
+      attached: function() {
+        // render
+        this.innerHTML = 'Hello World, my user is ' + (this.user || 'nobody') + '.\n' +
+          'This user is ' + (this.manager ? '' : 'not') + ' a manager.';
       }
-    },
+    });
 
-    attached: function() {
-      // render
-      this.innerHTML = 'Hello World, my user is ' + (this.user || 'nobody') + '.\n' +
-        'This user is ' + (this.manager ? '' : 'not') + ' a manager.';
-    }
-  });
+    Polymer({
 
-  Polymer({
+      is: 'x-custom-camel-case-property',
 
-    is: 'x-custom-camel-case-property',
+      properties: {
+        userName: String,
+      },
 
-    properties: {
-      userName: String,
-    },
-
-    attached: function() {
-      this.innerHTML = 'userName property of using dash-case attribute' + this.userName
-    }
+      attached: function() {
+        this.innerHTML = 'userName property of using dash-case attribute' + this.userName
+      }
+    });
   });
 </script>
 </body>
