--- a/samples/basic-lifecycle-callbacks.html
+++ b/samples/basic-lifecycle-callbacks.html
@@ -16,25 +16,27 @@
     console.log(msg);
   }
 
-  var MyElement = Polymer({
-    is: 'my-element',
+  document.addEventListener('WebComponentsReady', function() {
+    var MyElement = Polymer({
+      is: 'my-element',
 
-    created: function() {
-      out(this.localName + '#' + this.id + ' was created');
-    },
+      created: function() {
+        out(this.localName + '#' + this.id + ' was created');
+      },
 
-    attached: function() {
-      out(this.localName + '#' + this.id + ' was attached');
-    },
+      attached: function() {
+        out(this.localName + '#' + this.id + ' was attached');
+      },
 
-    detached: function() {
-      out(this.localName + '#' + this.id + ' was detached');
-    },
+      detached: function() {
+        out(this.localName + '#' + this.id + ' was detached');
+      },
 
-    attributeChanged: function(name, type) {
-      out(this.localName + '#' + this.id + ' attribute ' + name +
-        ' was changed to ' + this.getAttribute(name));
-    }
+      attributeChanged: function(name, type) {
+        out(this.localName + '#' + this.id + ' attribute ' + name +
+          ' was changed to ' + this.getAttribute(name));
+      }
+    });
   });
 </script>
 </body>
