--- a/samples/bespoke-constructor-support.html
+++ b/samples/bespoke-constructor-support.html
@@ -11,20 +11,22 @@
 <body>
 <my-element></my-element>
 <script>
-  var MyElement = Polymer({
-    is: 'my-element',
+  document.addEventListener('WebComponentsReady', function() {
+    var MyElement = Polymer({
+      is: 'my-element',
 
-    constructor: function(foo, bar) {
-      this.foo = foo;
-      this.configureWithBar(bar);
-    },
+      constructor: function(foo, bar) {
+        this.foo = foo;
+        this.configureWithBar(bar);
+      },
 
-    configureWithBar: function(bar) {
-      document.write(bar);
-    }
+      configureWithBar: function(bar) {
+        document.write(bar);
+      }
+    });
+
+    var el = new MyElement(42, 'octopus');
   });
-
-  var el = new MyElement(42, 'octopus');
 </script>
 </body>
 </html>
