--- a/samples/computed-properties.html
+++ b/samples/computed-properties.html
@@ -16,23 +16,25 @@
 </dom-module>
 
 <script>
-  Polymer({
-    is: 'x-custom',
+  document.addEventListener('WebComponentsReady', function() {
+    Polymer({
+      is: 'x-custom',
 
-    properties: {
-      first: String,
-      last: String,
-      fullName: {
-        type: String,
-        // when `first` or `last` changes `computeFullName` is called once
-        // (asynchronously) and the value it returns is stored as `fullName`
-        computed: 'computeFullName(first, last)'
+      properties: {
+        first: String,
+        last: String,
+        fullName: {
+          type: String,
+          // when `first` or `last` changes `computeFullName` is called once
+          // (asynchronously) and the value it returns is stored as `fullName`
+          computed: 'computeFullName(first, last)'
+        }
+      },
+
+      computeFullName: function(first, last) {
+        return first + ' ' + last;
       }
-    },
-
-    computeFullName: function(first, last) {
-      return first + ' ' + last;
-    }
+    });
   });
 </script>
 
