--- a/samples/custom-element-constructor.html
+++ b/samples/custom-element-constructor.html
@@ -11,15 +11,17 @@
 <body>
 <my-element></my-element>
 <script>
-  var MyElement = Polymer.Class({
-    is: 'my-element',
+  document.addEventListener('WebComponentsReady', function() {
+    var MyElement = Polymer.Class({
+      is: 'my-element',
 
-    created: function() {
-      this.innerHTML = 'My element!';
-    }
+      created: function() {
+        this.innerHTML = 'My element!';
+      }
+    });
+
+    document.registerElement('my-element', MyElement);
   });
-
-  document.registerElement('my-element', MyElement);
 </script>
 </body>
 </html>
