--- a/samples/property-change-notification-and-one-way-binding-to-upward.html
+++ b/samples/property-change-notification-and-one-way-binding-to-upward.html
@@ -16,35 +16,37 @@
 </dom-module>
 
 <script>
-  Polymer({
-    is: "custom-elements",
+  document.addEventListener('WebComponentsReady', function() {
+    Polymer({
+      is: "custom-elements",
 
-    properties: {
-      value: {
-        type: String,
-        observer: 'valueChanged'
+      properties: {
+        value: {
+          type: String,
+          observer: 'valueChanged'
+        }
+      },
+
+      valueChanged: function(newVal, oldVal) {
+        console.log('Host value has been changed', newVal);
       }
-    },
+    })
 
-    valueChanged: function(newVal, oldVal) {
-      console.log('Host value has been changed', newVal);
-    }
-  })
+    Polymer({
+      is: 'custom-element',
 
-  Polymer({
-    is: 'custom-element',
+      properties: {
+        prop: {
+          type: String,
+          notify: true,
+          readOnly: true,
+        }
+      },
 
-    properties: {
-      prop: {
-        type: String,
-        notify: true,
-        readOnly: true,
+      ready: function() {
+        this._setProp("from child");
       }
-    },
-
-    ready: function() {
-      this._setProp("from child");
-    }
+    });
   });
 </script>
 
