--- a/samples/scoped-styling.html
+++ b/samples/scoped-styling.html
@@ -31,8 +31,10 @@
 </dom-module>
 
 <script>
-  Polymer({
-    is: 'my-element'
+  document.addEventListener('WebComponentsReady', function() {
+    Polymer({
+      is: 'my-element'
+    });
   });
 </script>
 <body>
